Revision history for Perl extension Module::Build.

0.27_04

 - Fixed an edge case in $VERSION parsing where we thought a package()
   declaration was happening but it wasn't. [David Golden]

 - Added docs for the install_destination() and install_types() methods.

0.27_03 (Beta for 0.28)  Mon Oct 10 11:19:23 EDT 2005

 - We now use ExtUtils::CBuilder to do all compiling of C code (for
   example, when compiling XS modules).  (This change actually
   occurred in 0.27_01, but it was mistakenly omitted from the Changes
   file.)

 - Fixed an issue on Win32 (and other case-tolerant
   non-case-preserving systems, possibly like VMS?) in which the
   current working directory would sometimes be reported with
   different case, fooling us into thinking that we were in the wrong
   directory. [David Golden]

 - The extra_compiler_flags setting was not actually being passed
   along to ExtUtils::CBuilder so it could pass it along to the
   compiler.  Now it is.

 - The synonyms 'scripts' and 'prereq' for 'script_files' and
   'requires' were broken in a previous version (0.27_01, probably),
   but now they're fixed. [David Golden]
 
 - Previously, we assumed that any custom subclass of Module::Build
   was located in _build/lib/.  This is only true if the author used
   the subclass() method, though.  We now use %INC to find where the
   custom subclass really is, so that we can "use lib" it.  We also
   issue a warning if it seems to be outside the build directory.
   [Spotted by Peter Tandler]

 - Added a URL for each license type that we know about, which will
   appear as resources=>license: in the generated META.yml file.

 - If the user passes a no_index parameter to our constructor, we now
   pass that through when building the META.yml file. [Richard
   Soderberg, RT #9603]

 - A few more status messages can now be suppressed by using 'quiet'
   mode.  [Dave Rolsky]

 - Added some more entries to the default MANIFEST.SKIP file. [Chris
   Dolan]
